@@ -10,8 +10,6 @@ require(__DIR__ . "/run_bcmath_tests_function.inc");
 
 $exponents = ["15", "-15", "1", "-9", "0", "-0"];
 $baseNumbers = array_merge($exponents, [
-    "0.00",
-    "-0.00",
     "14.14",
     "-16.60",
     "0.15",
@@ -75,22 +73,6 @@ Number "-0" (scale 0)
 -0 ** -9                             = 0
 -0 ** 0                              = 1
 -0 ** -0                             = 1
-
-Number "0.00" (scale 0)
-0.00 ** 15                             = 0
-0.00 ** -15                            = 0
-0.00 ** 1                              = 0
-0.00 ** -9                             = 0
-0.00 ** 0                              = 1
-0.00 ** -0                             = 1
-
-Number "-0.00" (scale 0)
--0.00 ** 15                             = 0
--0.00 ** -15                            = 0
--0.00 ** 1                              = 0
--0.00 ** -9                             = 0
--0.00 ** 0                              = 1
--0.00 ** -0                             = 1
 
 Number "14.14" (scale 0)
 14.14 ** 15                             = 180609729388653367
@@ -219,22 +201,6 @@ Number "-0" (scale 10)
 -0 ** -9                             = 0.0000000000
 -0 ** 0                              = 1.0000000000
 -0 ** -0                             = 1.0000000000
-
-Number "0.00" (scale 10)
-0.00 ** 15                             = 0.0000000000
-0.00 ** -15                            = 0.0000000000
-0.00 ** 1                              = 0.0000000000
-0.00 ** -9                             = 0.0000000000
-0.00 ** 0                              = 1.0000000000
-0.00 ** -0                             = 1.0000000000
-
-Number "-0.00" (scale 10)
--0.00 ** 15                             = 0.0000000000
--0.00 ** -15                            = 0.0000000000
--0.00 ** 1                              = 0.0000000000
--0.00 ** -9                             = 0.0000000000
--0.00 ** 0                              = 1.0000000000
--0.00 ** -0                             = 1.0000000000
 
 Number "14.14" (scale 10)
 14.14 ** 15                             = 180609729388653367.2586094856
