@@ -10,8 +10,6 @@ require(__DIR__ . "/run_bcmath_tests_function.inc");
 
 $exponents = ["252", "-112"];
 $baseNumbers = array_merge($exponents, [
-    "0.00",
-    "-0.00",
     "14.14",
     "-16.60",
     "0.15",
@@ -35,14 +33,6 @@ Number "252" (scale 0)
 Number "-112" (scale 0)
 -112 ** 252                            = 2528958559509291693508169626548016243760525615786379976651267082288161074806837567146354242426675448089179587223689918667106749284121965637887934532709154725528081671334320643858146400820666287506930741579829377389324701928200642059190071982670723834096616484481264403390509754202256821825886418273918096647296731861068941003342202311747852949747419032091731983573265045376333262301085406296848909763397511959941544798830761308589095475080050282796818166220650002245272286955283850226653729461037771414650027776147456
 -112 ** -112                           = 0
-
-Number "0.00" (scale 0)
-0.00 ** 252                            = 0
-0.00 ** -112                           = 0
-
-Number "-0.00" (scale 0)
--0.00 ** 252                            = 0
--0.00 ** -112                           = 0
 
 Number "14.14" (scale 0)
 14.14 ** 252                            = 81893830287657387446140079713887806093576884288543703328783802176508922753380870094003376900318176725198165627317176488631295332728458521626072637389422651709754634844150191850264235770478926203337416116264674564206565124289082609409927041547210316199545928823591027686585730497632744792533
@@ -91,14 +81,6 @@ Number "252" (scale 10)
 Number "-112" (scale 10)
 -112 ** 252                            = 2528958559509291693508169626548016243760525615786379976651267082288161074806837567146354242426675448089179587223689918667106749284121965637887934532709154725528081671334320643858146400820666287506930741579829377389324701928200642059190071982670723834096616484481264403390509754202256821825886418273918096647296731861068941003342202311747852949747419032091731983573265045376333262301085406296848909763397511959941544798830761308589095475080050282796818166220650002245272286955283850226653729461037771414650027776147456.0000000000
 -112 ** -112                           = 0.0000000000
-
-Number "0.00" (scale 10)
-0.00 ** 252                            = 0.0000000000
-0.00 ** -112                           = 0.0000000000
-
-Number "-0.00" (scale 10)
--0.00 ** 252                            = 0.0000000000
--0.00 ** -112                           = 0.0000000000
 
 Number "14.14" (scale 10)
 14.14 ** 252                            = 81893830287657387446140079713887806093576884288543703328783802176508922753380870094003376900318176725198165627317176488631295332728458521626072637389422651709754634844150191850264235770478926203337416116264674564206565124289082609409927041547210316199545928823591027686585730497632744792533.0727815413
