@@ -2,6 +2,9 @@ PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? ????, PHP 8.3.0beta2
 
+- Bcmath
+  . Fixed GH-11761 (removing trailing zeros from numbers) (jorgsowa)
+
 - Core:
   . Fixed oss-fuzz #60741 (Leak in open_basedir). (ilutov)
 
